samples/_failures_safe/1761160620_ca24d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df60a80d.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_df60a80d.c:184:29: error: expected ‘;’ at end of input
  184 |                 graph->edges
      |                             ^
      |                             ;
./samples/SAFE/__tmp_df60a80d.c:184:17: error: expected declaration or statement at end of input
  184 |                 graph->edges
      |                 ^~~~~
./samples/SAFE/__tmp_df60a80d.c:184:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df60a80d.c:184:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df60a80d.c:184:17: error: expected declaration or statement at end of input
